--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -988,6 +988,16 @@ To configure what sections are displayed in the buffer, set @code{org-roam-mode-
 
 Note that computing unlinked references may be slow, and has not been added in by default.
 
+Or, if you want to render unique sources for backlinks (and also keep rendering reference links), set @code{org-roam-mode-section-functions} as follows:
+
+@lisp
+  (setq org-roam-mode-section-functions
+        (list
+         (lambda (node) (org-roam-backlinks-section node :unique t))
+         #'org-roam-reflinks-section))
+@end lisp
+
+
 @node Configuring the Org-roam buffer display
 @section Configuring the Org-roam buffer display
 
