--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -648,13 +648,14 @@ To configure what sections are displayed in the buffer, set ~org-roam-mode-secti
 
 Note that computing unlinked references may be slow, and has not been added in by default.
 
-Or, if you want to render unique sources for backlinks (and also keep rendering reference links), set ~org-roam-mode-section-functions~ as follows:
+For each section function, you can pass args along to modify its behaviour. For
+example, if you want to render unique sources for backlinks (and also keep
+rendering reference links), set ~org-roam-mode-section-functions~ as follows:
 
 #+begin_src emacs-lisp
   (setq org-roam-mode-section-functions
-        (list
-         (lambda (node) (org-roam-backlinks-section node :unique t))
-         #'org-roam-reflinks-section))
+        '((org-roam-backlinks-section :unique t)
+          org-roam-reflinks-section))
 #+end_src
 
 ** Configuring the Org-roam buffer display
