--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -636,10 +636,10 @@ There are currently 3 provided widget types:
 - Unlinked references :: View nodes that contain text that match the nodes
   title/alias but are not linked
 
-To configure what sections are displayed in the buffer, set ~org-roam-mode-section-functions~.
+To configure what sections are displayed in the buffer, set ~org-roam-mode-sections.
 
 #+begin_src emacs-lisp
-  (setq org-roam-mode-section-functions
+  (setq org-roam-mode-sections
         (list #'org-roam-backlinks-section
               #'org-roam-reflinks-section
               ;; #'org-roam-unlinked-references-section
@@ -650,10 +650,10 @@ Note that computing unlinked references may be slow, and has not been added in b
 
 For each section function, you can pass args along to modify its behaviour. For
 example, if you want to render unique sources for backlinks (and also keep
-rendering reference links), set ~org-roam-mode-section-functions~ as follows:
+rendering reference links), set ~org-roam-mode-sections~ as follows:
 
 #+begin_src emacs-lisp
-  (setq org-roam-mode-section-functions
+  (setq org-roam-mode-sections
         '((org-roam-backlinks-section :unique t)
           org-roam-reflinks-section))
 #+end_src
