--- a/doc/org-roam.texi
+++ b/doc/org-roam.texi
@@ -976,10 +976,10 @@ There are currently 3 provided widget types:
 title/alias but are not linked
 @end itemize
 
-To configure what sections are displayed in the buffer, set @code{org-roam-mode-section-functions}.
+To configure what sections are displayed in the buffer, set ~org-roam-mode-sections.
 
 @lisp
-(setq org-roam-mode-section-functions
+(setq org-roam-mode-sections
       (list #'org-roam-backlinks-section
             #'org-roam-reflinks-section
             ;; #'org-roam-unlinked-references-section
@@ -990,10 +990,10 @@ Note that computing unlinked references may be slow, and has not been added in b
 
 For each section function, you can pass args along to modify its behaviour. For
 example, if you want to render unique sources for backlinks (and also keep
-rendering reference links), set @code{org-roam-mode-section-functions} as follows:
+rendering reference links), set @code{org-roam-mode-sections} as follows:
 
 @lisp
-(setq org-roam-mode-section-functions
+(setq org-roam-mode-sections
       '((org-roam-backlinks-section :unique t)
         org-roam-reflinks-section))
 @end lisp
