--- a/doc/org-roam.org
+++ b/doc/org-roam.org
@@ -224,7 +224,6 @@ dependencies that it requires. These include:
 - s
 - org
 - emacsql
-- emacsql-sqlite
 - magit-section
 
 You can install this manually as well, or get the latest version from MELPA. You
@@ -423,43 +422,8 @@ can set ~org-roam-node-display-template~ as such:
 
 * Customizing Node Caching
 ** How to cache
-
-Org-roam uses a sqlite database to perform caching, but there are multiple Emacs
-libraries that can be used. The default used by Org-roam is
-[[https://github.com/magit/emacsql/blob/main/emacsql-sqlite-builtin.el][~emacs-sqlite-builtin~]].  Below the pros and cons of each package is used:
-
-[[https://melpa.org/#/emacsql-sqlite-builtin][**emacsql-sqlite-builtin**]]
-
-~emacsql-sqlite-builtin~ uses the in-built SQLite support for Emacs 29 and
-later. This is the default option if you are using a version of Emacs that
-supports it.
-
-#+begin_src emacs-lisp
-  (setq org-roam-database-connector 'sqlite-builtin)
-#+end_src
-
-[[https://github.com/cireu/emacsql-sqlite3][**emacs-sqlite3**]]
-
-~emacs-sqlite3~ uses the official sqlite3 binary that can be obtained from your
-system's package manager. This is useful if you have issues producing the
-~sqlite3~ binary required by the other packages. However, it is not recommended
-because it has some compatibility issues with Emacs, but should work for most
-regular cases. See [[https://nullprogram.com/blog/2014/02/06/][Chris Wellon's blog post]] for more information.
-
-To use ~emacsql-sqlite3~, ensure that the package is installed, and set:
-
-#+begin_src emacs-lisp
-  (setq org-roam-database-connector 'sqlite3)
-#+end_src
-
-[[https://melpa.org/#/emacsql-sqlite-module][**emacssql-sqlite-module**]] (previously emacsql-libsqlite3)
-
-~emacs-sqlite-module~ is a relatively young package which uses an Emacs module that
-exposes parts of the SQLite C API to Emacs Lisp.
-
-#+begin_src emacs-lisp
-  (setq org-roam-database-connector 'sqlite-module)
-#+end_src
+Org-roam uses a SQLite database to perform caching.  This integration is
+managed by the [[https://github.com/magit/emacsql][emacsql]] library.  It should "just work".
 
 ** What to cache
 
@@ -481,7 +445,7 @@ property to a non-nil value. For example:
 One can also set ~org-roam-db-node-include-function~. For example, to exclude
 all headlines with the ~ATTACH~ tag from the Org-roam database, one can set:
 
-#+begin_src org
+#+begin_src emacs-lisp
 (setq org-roam-db-node-include-function
       (lambda ()
         (not (member "ATTACH" (org-get-tags)))))
